--- a/package.json
+++ b/package.json
@@ -1,9 +1,62 @@
 {
-  "name": "@lint-suite/source",
-  "version": "0.0.0",
+  "name": "lint-suite",
+  "version": "0.0.1",
+  "description": "Reusable ESLint configurations",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/F0rty-Tw0/lint-suite.git",
+    "directory": "packages/lint-suite"
+  },
+  "keywords": [
+    "eslint",
+    "eslintconfig",
+    "lint",
+    "typescript",
+    "jest",
+    "angular",
+    "storybook",
+    "json"
+  ],
   "license": "MIT",
-  "scripts": {},
-  "private": true,
+  "author": "Artiom Tofan artiomtofancv@gmail.com",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "nx build my-eslint-config",
+    "prepublishOnly": "npm run build"
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
+    },
+    "./base": {
+      "types": "./dist/configs/base.d.ts",
+      "import": "./dist/configs/base.js",
+      "require": "./dist/configs/base.cjs",
+      "default": "./dist/configs/base.js"
+    },
+    "./typescript": {
+      "types": "./dist/configs/typescript.d.ts",
+      "import": "./dist/configs/typescript.js",
+      "require": "./dist/configs/typescript.cjs",
+      "default": "./dist/configs/typescript.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE",
+    "!**/*.tsbuildinfo"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {},
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -24,9 +77,6 @@
     "typescript-eslint": "^8.19.0",
     "verdaccio": "^6.0.5"
   },
-  "workspaces": [
-    "packages/*"
-  ],
   "nx": {
     "includedScripts": [],
     "targets": {
