refactor lint-suite package: migrate to TypeScript, restructure files, and update configurations

--- a/nx.json
+++ b/nx.json
@@ -36,5 +36,12 @@
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
     }
+  },
+  "targetDefaults": {
+    "@nx/esbuild:esbuild": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    }
   }
 }
