--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Reusable ESLint configurations",
   "repository": {
     "type": "git",
-    "url": "https://github.com/F0rty-Tw0/lint-suite.git",
+    "url": "git+https://github.com/F0rty-Tw0/lint-suite.git",
     "directory": "packages/lint-suite"
   },
   "keywords": [
@@ -116,7 +116,7 @@
             {
               "input": "src/lib",
               "glob": "**/*.js",
-              "output": "lib"
+              "output": "src/lib"
             }
           ],
           "minify": false,
