--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -6,6 +6,7 @@
     "allowJs": true,
     "outDir": "./dist",
     "declaration": true,
+    "declarationDir": "./dist",
     "tsBuildInfoFile": "./dist/tsconfig.lib.tsbuildinfo",
     "emitDeclarationOnly": false,
     "forceConsistentCasingInFileNames": true,
