--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-suite",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Reusable ESLint configurations",
   "repository": {
     "type": "git",
@@ -24,8 +24,14 @@
   "module": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "eslint": "^9.8.0",
-    "@nx/eslint-plugin": "^20.6.4"
+    "eslint": "^9.23.0",
+    "@nx/eslint-plugin": "^20.6.4",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-json": "^4.0.1",
+    "@smarttools/eslint-plugin-rxjs": "^1.0.18",
+    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-import": "^2.31.0",
+    "@stylistic/eslint-plugin": "^4.2.0"
   },
   "scripts": {
     "build": "nx build lint-suite",
