--- a/packages/lint-suite/project.json
+++ b/packages/lint-suite/project.json
@@ -51,7 +51,7 @@
     },
     "nx-release-publish": {
       "options": {
-        "packageRoot": "dist/{projectRoot}"
+        "packageRoot": "dist/{projectRoot}/src"
       }
     }
   }
