--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "rootDir": ".",
     "baseUrl": ".",
     "composite": true,
     "declarationMap": true,
@@ -17,9 +18,6 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["development"],
-    "paths": {
-      "lint-suite": ["packages/lint-suite/src/index.ts"]
-    }
+    "customConditions": ["development"]
   }
 }
