--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "license": "MIT",
   "author": "Artiom Tofan artiomtofancv@gmail.com",
   "type": "module",
-  "dependencies": {},
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/esbuild": "^20.6.4",
     "@nx/eslint": "20.6.4",
+    "@nx/eslint-plugin": "^20.6.4",
     "@nx/js": "20.6.4",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/node": "18.16.9",
-    "@nx/eslint-plugin": "^20.6.4",
+    "@types/node": "^18.16.9",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
