chore(changelog): update to version 1.0.2; fix parser issues and add @stylistic support for prettier

--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -25,13 +25,22 @@
   "types": "./index.d.ts",
   "dependencies": {
     "eslint": "^9.23.0",
-    "@nx/eslint-plugin": "^20.6.4",
+    "@nx/eslint-plugin": "^20.7.0",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-json": "^4.0.1",
     "@smarttools/eslint-plugin-rxjs": "^1.0.18",
     "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-import": "^2.31.0",
-    "@stylistic/eslint-plugin": "^4.2.0"
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "eslint-config-prettier": "^10.1.1"
+  },
+  "peerDependencies": {
+    "eslint-config-prettier": "^10.1.1"
+  },
+  "peerDependenciesMeta": {
+    "eslint-config-prettier": {
+      "optional": true
+    }
   },
   "scripts": {
     "build": "nx build lint-suite",
