--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "author": "Artiom Tofan artiomtofancv@gmail.com",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@nx/esbuild": "^20.6.4",
-    "@nx/eslint": "20.6.4",
-    "@nx/eslint-plugin": "^20.6.4",
-    "@nx/js": "20.6.4",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/node": "^18.16.9",
-    "esbuild": "^0.19.2",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
-    "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.6.4",
-    "prettier": "^2.6.2",
-    "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0"
+    "@eslint/js": "^9.23.0",
+    "@nx/esbuild": "20.7.0",
+    "@nx/eslint": "20.7.0",
+    "@nx/eslint-plugin": "20.7.0",
+    "@nx/js": "20.7.0",
+    "@swc-node/register": "~1.10.10",
+    "@swc/core": "~1.11.16",
+    "@swc/helpers": "~0.5.15",
+    "@types/node": "^22.13.17",
+    "esbuild": "^0.19.12",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "10.1.1",
+    "jsonc-eslint-parser": "^2.4.0",
+    "nx": "20.7.0",
+    "prettier": "^3.5.3",
+    "tslib": "^2.8.1",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.29.0"
   },
   "workspaces": [
     "packages/*"
