--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "author": "Artiom Tofan artiomtofancv@gmail.com",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@nx/esbuild": "20.7.0",
-    "@nx/eslint": "20.7.0",
-    "@nx/eslint-plugin": "20.7.0",
-    "@nx/js": "20.7.0",
+    "@eslint/js": "^9.26.0",
+    "@nx/esbuild": "20.8.1",
+    "@nx/eslint": "20.8.1",
+    "@nx/eslint-plugin": "20.8.1",
+    "@nx/js": "20.8.1",
     "@swc-node/register": "~1.10.10",
-    "@swc/core": "~1.11.16",
-    "@swc/helpers": "~0.5.15",
-    "@types/node": "^22.13.17",
+    "@swc/core": "~1.11.24",
+    "@swc/helpers": "~0.5.17",
+    "@types/node": "^22.15.3",
+    "angular-eslint": "^19.3.0",
     "esbuild": "^0.19.12",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "10.1.1",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "10.1.2",
     "jsonc-eslint-parser": "^2.4.0",
-    "nx": "20.7.0",
+    "nx": "20.8.1",
     "prettier": "^3.5.3",
     "tslib": "^2.8.1",
-    "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.31.1"
   },
   "workspaces": [
     "packages/*"
