--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -24,14 +24,15 @@
   "module": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "eslint": "^9.23.0",
-    "@nx/eslint-plugin": "^20.7.0",
+    "eslint": "^9.26.0",
+    "@nx/eslint-plugin": "^20.8.1",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-json": "^4.0.1",
-    "@smarttools/eslint-plugin-rxjs": "^1.0.18",
+    "@smarttools/eslint-plugin-rxjs": "^1.0.19",
     "eslint-plugin-storybook": "^0.12.0",
-    "eslint-plugin-import": "^2.31.0",
-    "@stylistic/eslint-plugin": "^4.2.0"
+    "eslint-plugin-import-x": "^4.11.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "eslint-import-resolver-typescript": "^4.3.4"
   },
   "scripts": {
     "build": "nx build lint-suite",
