--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-suite",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Reusable ESLint configurations",
   "repository": {
     "type": "git",
@@ -32,7 +32,8 @@
     "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-import-x": "^4.11.0",
     "@stylistic/eslint-plugin": "^4.2.0",
-    "eslint-import-resolver-typescript": "^4.3.4"
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "@typescript-eslint/utils": "8.31.1"
   },
   "scripts": {
     "build": "nx build lint-suite",
