--- a/packages/lint-suite/project.json
+++ b/packages/lint-suite/project.json
@@ -5,18 +5,21 @@
   "projectType": "library",
   "release": {
     "version": {
-      "generatorOptions": {
-        "packageRoot": "dist/{projectRoot}/src",
-        "currentVersionResolver": "git-tag",
-        "fallbackCurrentVersionResolver": "disk"
-      }
+      "currentVersionResolver": "git-tag",
+      "fallbackCurrentVersionResolver": "disk",
+      "preserveLocalDependencyProtocols": false,
+      "manifestRootsToUpdate": [
+        "dist/{projectRoot}/src"
+      ]
     }
   },
   "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "main": "packages/lint-suite/src/index.ts",
@@ -24,7 +27,10 @@
         "outputFileName": "packages/lint-suite/src/index.js",
         "tsConfig": "packages/lint-suite/tsconfig.lib.json",
         "platform": "node",
-        "format": ["esm", "cjs"],
+        "format": [
+          "esm",
+          "cjs"
+        ],
         "assets": [
           {
             "glob": "README.md",
