chore: update dependencies and version for lint-suite
- Updated devDependencies in package.json to latest versions including:
  - @eslint/js to ^9.38.0
  - @nx/esbuild, @nx/eslint, @nx/eslint-plugin, @nx/js to 21.6.5
  - @swc-node/register to ~1.11.1
  - @swc/core to ~1.13.5
  - @types/node to ^24.9.0
  - angular-eslint to ^20.4.0
  - esbuild to ^0.25.11
  - eslint to ^9.38.0
  - eslint-config-prettier to 10.1.8
  - nx to 21.6.5
  - prettier to ^3.6.2
  - typescript to 5.9.3
  - Updated dependencies in lint-suite package.json to match new versions.
- Bumped version of lint-suite from 1.0.6 to 1.0.7.
- Updated project.json for lint-suite to streamline versioning.
- Removed baseUrl from tsconfig.base.json.
- Added migrations.json for Nx version updates.
- Added type definitions for eslint-plugin-storybook.

--- a/packages/lint-suite/project.json
+++ b/packages/lint-suite/project.json
@@ -5,11 +5,10 @@
   "projectType": "library",
   "release": {
     "version": {
-      "generatorOptions": {
-        "packageRoot": "dist/{projectRoot}/src",
-        "currentVersionResolver": "git-tag",
-        "fallbackCurrentVersionResolver": "disk"
-      }
+      "currentVersionResolver": "git-tag",
+      "fallbackCurrentVersionResolver": "disk",
+      "preserveLocalDependencyProtocols": false,
+      "manifestRootsToUpdate": ["dist/{projectRoot}/src"]
     }
   },
   "tags": [],
