--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "author": "Artiom Tofan artiomtofancv@gmail.com",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "@nx/esbuild": "20.8.1",
-    "@nx/eslint": "20.8.1",
-    "@nx/eslint-plugin": "20.8.1",
-    "@nx/js": "20.8.1",
-    "@swc-node/register": "~1.10.10",
-    "@swc/core": "~1.11.24",
+    "@eslint/js": "^9.38.0",
+    "@nx/esbuild": "21.6.5",
+    "@nx/eslint": "21.6.5",
+    "@nx/eslint-plugin": "21.6.5",
+    "@nx/js": "21.6.5",
+    "@swc-node/register": "~1.11.1",
+    "@swc/core": "~1.13.5",
     "@swc/helpers": "~0.5.17",
-    "@types/node": "^22.15.3",
-    "angular-eslint": "^19.3.0",
-    "esbuild": "^0.19.12",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "10.1.2",
-    "nx": "20.8.1",
-    "prettier": "^3.5.3",
+    "@types/node": "^24.9.0",
+    "angular-eslint": "^20.4.0",
+    "esbuild": "^0.25.11",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "10.1.8",
+    "nx": "21.6.5",
+    "prettier": "^3.6.2",
     "tslib": "^2.8.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.31.1"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.2"
   },
   "workspaces": [
     "packages/*"
