--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-suite",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Reusable ESLint configurations",
   "repository": {
     "type": "git",
@@ -24,16 +24,16 @@
   "module": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "eslint": "^9.26.0",
-    "@nx/eslint-plugin": "^20.8.1",
-    "eslint-plugin-jest": "^28.11.0",
+    "eslint": "^9.38.0",
+    "@nx/eslint-plugin": "^21.6.5",
+    "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-json": "^4.0.1",
-    "@smarttools/eslint-plugin-rxjs": "^1.0.19",
-    "eslint-plugin-storybook": "^0.12.0",
-    "eslint-plugin-import-x": "^4.11.0",
-    "@stylistic/eslint-plugin": "^4.2.0",
-    "eslint-import-resolver-typescript": "^4.3.4",
-    "@typescript-eslint/utils": "8.31.1"
+    "@smarttools/eslint-plugin-rxjs": "1.0.22",
+    "eslint-plugin-storybook": "9.1.13",
+    "eslint-plugin-import-x": "4.16.1",
+    "@stylistic/eslint-plugin": "5.5.0",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "@typescript-eslint/utils": "8.46.2"
   },
   "scripts": {
     "build": "nx build lint-suite",
