chore(lint-suite): bump version to 1.0.9 and update dependencies
- Updated version from 1.0.7 to 1.0.9
- Added new dependencies: typescript-eslint@8.46.2, angular-eslint@^20.4.0, and globals@15.15.0

--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-suite",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "Reusable ESLint configurations",
   "repository": {
     "type": "git",
@@ -33,7 +33,10 @@
     "eslint-plugin-import-x": "4.16.1",
     "@stylistic/eslint-plugin": "5.5.0",
     "eslint-import-resolver-typescript": "4.4.4",
-    "@typescript-eslint/utils": "8.46.2"
+    "@typescript-eslint/utils": "8.46.2",
+    "typescript-eslint": "8.46.2",
+    "angular-eslint": "^20.4.0",
+    "globals": "15.15.0"
   },
   "scripts": {
     "build": "nx build lint-suite",
