--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -15,7 +15,10 @@
     "jest",
     "angular",
     "storybook",
-    "json"
+    "json",
+    "rxjs",
+    "vitest",
+    "playwright"
   ],
   "license": "MIT",
   "author": "Artiom Tofan artiomtofancv@gmail.com",
@@ -35,6 +38,8 @@
     "eslint-import-resolver-typescript": "4.4.4",
     "@typescript-eslint/utils": "8.46.2",
     "typescript-eslint": "8.46.2",
+    "@vitest/eslint-plugin": "1.3.23",
+    "eslint-plugin-playwright": "2.2.2",
     "angular-eslint": "^20.4.0",
     "globals": "15.15.0"
   },
