--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -28,7 +28,7 @@
   "types": "./index.d.ts",
   "dependencies": {
     "eslint": "^9.38.0",
-    "@nx/eslint-plugin": "^21.6.5",
+    "@nx/eslint-plugin": "22.0.1",
     "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-json": "^4.0.1",
     "@smarttools/eslint-plugin-rxjs": "1.0.22",
@@ -39,7 +39,7 @@
     "@typescript-eslint/utils": "8.46.2",
     "typescript-eslint": "8.46.2",
     "angular-eslint": "^20.4.0",
-    "globals": "15.15.0"
+    "globals": "16.4.0"
   },
   "scripts": {
     "build": "nx build lint-suite",
