--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-json": "^4.0.1",
     "@smarttools/eslint-plugin-rxjs": "1.0.22",
+    "@vitest/eslint-plugin": "1.3.23",
     "eslint-plugin-storybook": "9.1.13",
     "eslint-plugin-import-x": "4.16.1",
     "@stylistic/eslint-plugin": "5.5.0",
