--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -28,9 +28,9 @@
   "types": "./index.d.ts",
   "dependencies": {
     "eslint": "^9.38.0",
-    "@nx/eslint-plugin": "22.0.1",
     "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-playwright": "2.2.2",
     "@smarttools/eslint-plugin-rxjs": "1.0.22",
     "@vitest/eslint-plugin": "1.3.23",
     "eslint-plugin-storybook": "9.1.13",
