--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -27,6 +27,7 @@
   "module": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
+    "@nx/eslint-plugin": "22.0.1",
     "eslint": "^9.38.0",
     "eslint-plugin-jest": "29.0.1",
     "eslint-plugin-json": "^4.0.1",
