--- a/packages/lint-suite/package.json
+++ b/packages/lint-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lint-suite",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Reusable ESLint configurations",
   "repository": {
     "type": "git",
@@ -27,21 +27,22 @@
   "module": "./index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "@nx/eslint-plugin": "22.0.1",
-    "eslint": "^9.38.0",
-    "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-json": "^4.0.1",
-    "eslint-plugin-playwright": "2.2.2",
+    "@nx/eslint-plugin": "22.3.3",
     "@smarttools/eslint-plugin-rxjs": "1.0.22",
-    "@vitest/eslint-plugin": "1.3.23",
-    "eslint-plugin-storybook": "9.1.13",
-    "eslint-plugin-import-x": "4.16.1",
-    "@stylistic/eslint-plugin": "5.5.0",
+    "@stylistic/eslint-plugin": "5.6.1",
+    "@typescript-eslint/utils": "8.50.1",
+    "@vitest/eslint-plugin": "1.6.4",
+    "angular-eslint": "^21.1.0",
+    "eslint": "^9.39.2",
     "eslint-import-resolver-typescript": "4.4.4",
-    "@typescript-eslint/utils": "8.46.2",
-    "typescript-eslint": "8.46.2",
-    "angular-eslint": "^20.4.0",
-    "globals": "16.4.0"
+    "eslint-plugin-import-x": "4.16.1",
+    "eslint-plugin-jest": "29.11.0",
+    "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-playwright": "2.4.0",
+    "eslint-plugin-storybook": "10.1.10",
+    "eslint-plugin-boundaries": "^5.3.1",
+    "globals": "16.5.0",
+    "typescript-eslint": "8.50.1"
   },
   "scripts": {
     "build": "nx build lint-suite",
