--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "esbuild": "^0.27.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "10.1.8",
+    "jsonc-eslint-parser": "^2.4.2",
     "nx": "22.3.3",
     "prettier": "^3.7.4",
     "tslib": "^2.8.1",
     "typescript": "5.9.3",
     "typescript-eslint": "8.50.1"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "packageManager": "pnpm@10.29.3",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild",
+      "nx",
+      "unrs-resolver"
+    ]
+  }
 }
