--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "author": "Artiom Tofan artiomtofancv@gmail.com",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
-    "@nx/esbuild": "22.3.3",
-    "@nx/eslint": "22.3.3",
-    "@nx/eslint-plugin": "22.3.3",
-    "@nx/js": "22.3.3",
-    "@swc-node/register": "~1.11.1",
-    "@swc/core": "~1.15.7",
-    "@swc/helpers": "~0.5.17",
-    "@types/node": "^25.0.3",
-    "angular-eslint": "^21.1.0",
-    "esbuild": "^0.27.2",
+    "@eslint/js": "^10.0.1",
+    "@nx/esbuild": "22.5.0",
+    "@nx/eslint": "22.5.0",
+    "@nx/eslint-plugin": "22.5.0",
+    "@nx/js": "22.5.0",
+    "@swc-node/register": "1.11.1",
+    "@swc/core": "1.15.11",
+    "@swc/helpers": "0.5.18",
+    "@types/node": "^25.2.3",
+    "angular-eslint": "^21.2.0",
+    "esbuild": "^0.27.3",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "10.1.8",
     "jsonc-eslint-parser": "^2.4.2",
-    "nx": "22.3.3",
-    "prettier": "^3.7.4",
+    "nx": "22.5.0",
+    "prettier": "^3.8.1",
     "tslib": "^2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.50.1"
+    "typescript-eslint": "8.55.0"
   },
   "packageManager": "pnpm@10.29.3",
   "pnpm": {
